@startuml

title __BANK's Class Diagram__\n

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Account {
          - id : int
          - solde : double
          - isActive : boolean
          - isBlocked : boolean
          - creationDate : Date
          - transactionList : ArrayList<Transaction>
          {static} - nbAccount : int
          + Account()
          + Account()
          {static} + getNbAccount()
          ~ deposit()
          ~ withdraw()
          + transfer()
          + close()
          + block()
          + unblock()
          + getId()
          + getSolde()
          + isActive()
          + isBlocked()
          + getCreationDate()
          + toString()
          + getCustomer()
          + setCustomer()
          + getTransactionList()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Customer {
          - id : int
          - firstName : String
          - lastName : String
          + Customer()
          + Customer()
          + getId()
          + setId()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Main {
          {static} + main()
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Transaction {
          - id : int
          - date : Date
          - amount : double
          + Transaction()
          + Transaction()
          + toString()
          + getId()
          + setId()
          + getDate()
          + setDate()
          + getAmount()
          + setAmount()
          + getFromAccount()
          + setFromAccount()
          + getToAccount()
          + setToAccount()
      }
    }
  }
  

  Account o-- Customer : customer
  Transaction o-- Account : fromAccount
  Transaction o-- Account : toAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
